--- a/package.json
+++ b/package.json
@@ -17,19 +17,20 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@reduxjs/toolkit": "^1.8.0",
-    "expo": "~51.0.8",
+    "expo": "~51.0.12",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.11.6",
+    "expo-updates": "~0.25.16",
     "metro-react-native-babel-transformer": "^0.77.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-svg": "^15.3.0",
+    "react-native": "0.74.2",
+    "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
-    "web": "^0.0.2"
+    "web": "^0.0.2",
+    "expo-font": "~12.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
